# dougs-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dougs_mcp/: __init__.py  client.py  config.py  server.py
