[project]
name = "dougs-mcp-server"
version = "0.1.0"
description = "MCP server for Dougs online accounting (app.dougs.fr)"
readme = "README.md"
authors = [
    { name = "falistos", email = "falistos@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.28.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
dougs-mcp = "dougs_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dougs_mcp"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "UP", "RUF", "ASYNC", "S", "PTH", "DTZ", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
# The Dougs API returns untyped JSON; tools assert concrete shapes at the boundary.
warn_return_any = false
