[project]
name = "dougs-mcp-server"
version = "0.1.0"
description = "MCP server for Dougs online accounting (app.dougs.fr)"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mediavee" }]
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=3.2.4,<4.0.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
dougs-mcp = "dougs_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dougs_mcp"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
    "ASYNC",         # flake8-async
    "PTH",           # pathlib
    "TID",           # tidy imports
]
ignore = ["E501"]    # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
# The Dougs API returns untyped JSON; tools assert concrete shapes at the boundary.
warn_return_any = false
